# Compilation

lab0/: test.cc
lab1/dragon-tiger/: fibonacci.tig  read_unsigned.tig  regexp1.txt  regexp2.txt
lab2/dragon-tiger/: Makefile.in  aclocal.m4  config.h  config.status  configure
lab2/dragon-tiger/src/ast/: Makefile.am  Makefile.in  ast_evaluator.hh  nodes.hh
lab2/dragon-tiger/src/runtime/posix/: runtime.h
lab2/dragon-tiger/src/utils/: Makefile  Makefile.in
lab3/dragon-tiger/: Makefile.in  config.status  configure  configure.ac
lab3/dragon-tiger/src/: Makefile.am
lab3/dragon-tiger/src/utils/: Makefile
lab4/dragon-tiger/: Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac
lab4/dragon-tiger/src/utils/: Makefile.in
